Fix logo display on small devices

--- a/src/components/views/Homepage/Homepage.module.scss
+++ b/src/components/views/Homepage/Homepage.module.scss
@@ -14,4 +14,7 @@
     right: 1rem;
     width: 6rem;
   }
+  @media (max-width: $breakpoint-s) {
+    display: none;
+  }
 }
